tests/rosetta/out/Smalltalk/constrained-random-points-on-a-circle-2.out
/tmp/constrained-random-points-on-a-circle-2.st:12: parse error, expected integer literal or floating-point literal or decimal literal
