tests/rosetta/out/Smalltalk/constrained-random-points-on-a-circle-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| nPts rMin rMax span poss min2 max2 y x r2 rows r row c u seen n i yy col key i2 line j |
nPts := 100.
rMin := 10.
rMax := 15.
span := (((rMax + 1)) + rMax).
poss := {}.
min2 := (rMin * rMin).
max2 := (rMax * rMax).
y := -rMax.
[(y <= rMax)] whileTrue: [.
x := -rMax.
[(x <= rMax)] whileTrue: [.
r2 := (((x * x)) + ((y * y))).
((((r2 >= min2)) and: [((r2 <= max2))])) ifTrue: [
poss := poss copyWith: {x. y}.
] .
x := (x + 1).
].
.
y := (y + 1).
].
.
Transcript show: (((((poss size) asString)) + (' possible points'))) printString; cr.
rows := {}.
r := 0.
[(r < span)] whileTrue: [.
row := {}.
c := 0.
[(c < ((span * 2)))] whileTrue: [.
row := row copyWith: ' '.
c := (c + 1).
].
.
rows := rows copyWith: row.
r := (r + 1).
].
.
u := 0.
seen := Dictionary from:{}.
n := 0.
[(n < nPts)] whileTrue: [.
i := ((now value) % ((poss size))).
x := poss at: i at: 0.
yy := poss at: i at: 1.
row := (yy + rMax).
col := (((x + rMax)) * 2).
rows at: row at: col put: '*'.
key := (((((row asString)) + ',')) + ((col asString))).
(seen at: key not) ifTrue: [
seen at: key put: true.
u := (u + 1).
] .
n := (n + 1).
].
.
i2 := 0.
[(i2 < span)] whileTrue: [.
line := ''.
j := 0.
[(j < ((span * 2)))] whileTrue: [.
line := (line + (rows at: i2 at: j)).
j := (j + 1).
].
.
Transcript show: (line) printString; cr.
i2 := (i2 + 1).
].
.
Transcript show: ((((u asString)) + (' unique points'))) printString; cr.
